include/win32/Zig/win32_bridge.h

#define SYNCHRONIZATION_BARRIER_FLAGS_SPIN_ONLY 0x1
#define SYNCHRONIZATION_BARRIER_FLAGS_BLOCK_ONLY 0x2
#define SYNCHRONIZATION_BARRIER_FLAGS_NO_DELETE 0x4
typedef struct _FILE_BASIC_INFO {
    BYTE _rosetta_padding[40];
} FILE_BASIC_INFO, *PFILE_BASIC_INFO;
typedef struct _FILE_ID_128 {
    BYTE Identifier[16];
} FILE_ID_128;
typedef struct _FILE_ID_DESCRIPTOR {
    DWORD dwSize;
    DWORD Type;
    FILE_ID_128 FileId;
} FILE_ID_DESCRIPTOR, *LPFILE_ID_DESCRIPTOR;
#define HOLLOW_BRUSH 5
#define DC_BRUSH 18
#define DC_PEN 19