include/win32/Zig/win32_pending_bridge.zig


pub const FILE_SHARE_DELETE = 0x00000004;
pub const FILE_SHARE_READ = 0x00000001;
pub const FILE_SHARE_WRITE = 0x00000002;
pub const GENERIC_ALL = 0x10000000;
pub const GENERIC_EXECUTE = 0x20000000;
pub const GENERIC_READ = 0x80000000;
pub const GENERIC_WRITE = 0x40000000;
pub const DELETE = 0x00010000;
pub const READ_CONTROL = 0x00020000;
pub const SYNCHRONIZE = 0x00100000;
pub const FILE_READ_DATA = 0x0001;
pub const FILE_WRITE_DATA = 0x0002;
pub const FILE_APPEND_DATA = 0x0004;
pub const FILE_EXECUTE = 0x0020;
pub const FILE_READ_ATTRIBUTES = 0x0080;
pub const FILE_WRITE_ATTRIBUTES = 0x0100;
pub const CREATE_ALWAYS = 2;
pub const CREATE_NEW = 1;
pub const OPEN_ALWAYS = 4;
pub const OPEN_EXISTING = 3;
pub const TRUNCATE_EXISTING = 5;
pub const INVALID_FILE_ATTRIBUTES = 0xffffffff;
pub const FILE_ATTRIBUTE_HIDDEN = 0x2;
pub const FILE_ATTRIBUTE_NORMAL = 0x80;
pub const FILE_ATTRIBUTE_DIRECTORY = 0x10;
pub const FILE_BEGIN = 0;
pub const FILE_CURRENT = 1;
pub const FILE_END = 2;
pub const FILE_TYPE_UNKNOWN = 0x0000;
pub const FILE_TYPE_DISK = 0x0001;
pub const MOVEFILE_COPY_ALLOWED = 0x2;
pub const MOVEFILE_REPLACE_EXISTING = 0x1;
pub const PAGE_READONLY = 0x02;
pub const PAGE_READWRITE = 0x04;
pub const PAGE_EXECUTE_READ = 0x20;
pub const PAGE_EXECUTE_READWRITE = 0x40;
pub const FILE_MAP_COPY = 0x0001;
pub const FILE_MAP_WRITE = 0x0002;
pub const FILE_MAP_READ = 0x0004;
pub const FILE_FLAG_OVERLAPPED = 0x40000000;
pub const FILE_FLAG_NO_BUFFERING = 0x20000000;
pub const FILE_NOTIFY_CHANGE_FILE_NAME = 0x00000001;
pub const FILE_NOTIFY_CHANGE_DIR_NAME = 0x00000002;
pub const FILE_ACTION_ADDED = 0x00000001;
pub const FILE_ACTION_REMOVED = 0x00000002;
pub const FILE_ACTION_MODIFIED = 0x00000003;
pub const STATUS_WAIT_0 = 0x00000000;
pub const STATUS_TIMEOUT = 0x00000102;
pub const STATUS_PENDING = 0x00000103;
pub const USN_REASON_DATA_OVERWRITE = 0x00000001;
pub const USN_REASON_FILE_CREATE = 0x00000100;
pub const USN_REASON_CLOSE = 0x80000000;
pub const FILE_DEVICE_FILE_SYSTEM = 0x00000009;
pub const METHOD_BUFFERED = 0;
pub const METHOD_NEITHER = 3;
pub const FILE_ANY_ACCESS = 0;
pub const WIN32_FIND_DATAA = extern struct { _padding: [592]u8 = [_]u8{0} ** 592 };
pub const WIN32_FIND_DATAW = extern struct { _padding: [592]u8 = [_]u8{0} ** 592 };
pub const FILE_ID_128 = extern struct { _padding: [16]u8 = [_]u8{0} ** 16 };
pub const FILE_ID_DESCRIPTOR = extern struct { _padding: [24]u8 = [_]u8{0} ** 24 };
pub const FILE_BASIC_INFO = extern struct { _padding: [40]u8 = [_]u8{0} ** 40 };
pub const FILE_NAME_INFO = extern struct { _padding: [6]u8 = [_]u8{0} ** 6 };
pub const FILE_ID_INFO = extern struct { _padding: [24]u8 = [_]u8{0} ** 24 };
pub const FILE_NOTIFY_INFORMATION = extern struct { _padding: [16]u8 = [_]u8{0} ** 16 };
pub const WIN32_FILE_ATTRIBUTE_DATA = extern struct { _padding: [36]u8 = [_]u8{0} ** 36 };
pub const USN_JOURNAL_DATA_V0 = extern struct { _padding: [48]u8 = [_]u8{0} ** 48 };
pub const USN_RECORD_V2 = extern struct { _padding: [64]u8 = [_]u8{0} ** 64 };
pub const USN_RECORD_V3 = extern struct { _padding: [80]u8 = [_]u8{0} ** 80 };

pub const WHITE_BRUSH = 0;
pub const GRAY_BRUSH = 2;
pub const NULL_BRUSH = 5;
pub const HOLLOW_BRUSH = 5;
pub const BLACK_BRUSH = 4;
pub const DC_BRUSH = 18;
pub const WHITE_PEN = 6;
pub const BLACK_PEN = 7;
pub const DC_PEN = 19;
pub const OEM_FIXED_FONT = 10;
pub const ANSI_FIXED_FONT = 11;
pub const ANSI_VAR_FONT = 12;
pub const SYSTEM_FONT = 13;
pub const DEFAULT_GUI_FONT = 17;
pub const IDC_ARROW = 32512;
pub const IDC_IBEAM = 32513;
pub const IDC_WAIT = 32514;
pub const IDC_CROSS = 32515;
pub const IDC_SIZEALL = 32646;
pub const IDI_APPLICATION = 32512;
pub const IDI_ASTERISK = 32516;
pub const IDI_EXCLAMATION = 32517;
pub const IDI_HAND = 32513;
pub const IDI_QUESTION = 32514;
pub const IDI_WINLOGO = 32518;
pub const POINT = extern struct { x: LONG = 0, y: LONG = 0 };
pub const SIZE = extern struct { cx: LONG = 0, cy: LONG = 0 };
pub fn MAKEINTRESOURCE(i: anytype) usize {
    return @as(usize, @intCast(@as(u16, @intCast(i))));
}

pub const STD_INPUT_HANDLE = 0xFFFFFFF6;
pub const STD_OUTPUT_HANDLE = 0xFFFFFFF5;
pub const STD_ERROR_HANDLE = 0xFFFFFFF4;
pub const ATTACH_PARENT_PROCESS = 0xFFFFFFFF;
pub const HANDLE_FLAG_INHERIT = 0x00000001;
pub const HANDLE_FLAG_PROTECT_FROM_CLOSE = 0x00000002;
pub const FOREGROUND_BLUE = 0x0001;
pub const FOREGROUND_GREEN = 0x0002;
pub const FOREGROUND_RED = 0x0004;
pub const FOREGROUND_INTENSITY = 0x0008;
pub const BACKGROUND_BLUE = 0x0010;
pub const BACKGROUND_GREEN = 0x0020;
pub const BACKGROUND_RED = 0x0040;
pub const BACKGROUND_INTENSITY = 0x0080;
pub const CTRL_C_EVENT = 0;
pub const CTRL_BREAK_EVENT = 1;
pub const CTRL_CLOSE_EVENT = 2;
pub const ENABLE_PROCESSED_INPUT = 0x0001;
pub const ENABLE_LINE_INPUT = 0x0002;
pub const ENABLE_ECHO_INPUT = 0x0004;
pub const ENABLE_VIRTUAL_TERMINAL_INPUT = 0x0200;
pub const ENABLE_PROCESSED_OUTPUT = 0x0001;
pub const ENABLE_WRAP_AT_EOL_OUTPUT = 0x0002;
pub const ENABLE_VIRTUAL_TERMINAL_PROCESSING = 0x0004;
pub const HEAP_NO_SERIALIZE = 0x00000001;
pub const HEAP_ZERO_MEMORY = 0x00000008;
pub const MEM_COMMIT = 0x00001000;
pub const MEM_RESERVE = 0x00002000;
pub const MEM_RESET = 0x00080000;
pub const MEM_DECOMMIT = 0x4000;
pub const MEM_RELEASE = 0x8000;
pub const MEM_FREE = 0x10000;
pub const MEM_IMAGE = 0x1000000;
pub const MEM_MAPPED = 0x40000;
pub const MEM_PRIVATE = 0x20000;
pub const PAGE_NOACCESS = 0x01;
pub const PAGE_EXECUTE = 0x10;
pub const PAGE_GUARD = 0x100;
pub const PAGE_NOCACHE = 0x200;
pub const PAGE_WRITECOMBINE = 0x400;
pub const PIPE_WAIT = 0x00000000;
pub const PIPE_NOWAIT = 0x00000001;
pub const PIPE_ACCESS_INBOUND = 0x00000001;
pub const PIPE_ACCESS_OUTBOUND = 0x00000002;
pub const PIPE_ACCESS_DUPLEX = 0x00000003;
pub const PIPE_UNLIMITED_INSTANCES = 255;
pub const ERROR_PIPE_BUSY = 231;
pub const COORD = extern struct { X: SHORT = 0, Y: SHORT = 0 };
pub const SMALL_RECT = extern struct { Left: SHORT = 0, Top: SHORT = 0, Right: SHORT = 0, Bottom: SHORT = 0 };
pub const CONSOLE_SCREEN_BUFFER_INFO = extern struct { _padding: [22]u8 = [_]u8{0} ** 22 };
pub const MEMORY_BASIC_INFORMATION32 = extern struct { _padding: [28]u8 = [_]u8{0} ** 28 };
pub const MEMORY_BASIC_INFORMATION64 = extern struct { _padding: [56]u8 = [_]u8{0} ** 56 };

pub const INFINITE = 0xffffffff;
pub const STANDARD_RIGHTS_REQUIRED = 0x000F0000;
pub const PROCESS_DUP_HANDLE = 0x0040;
pub const PROCESS_QUERY_INFORMATION = 0x0400;
pub const PROCESS_SUSPEND_RESUME = 0x0800;
pub const PROCESS_TERMINATE = 0x0001;
pub const PROCESS_VM_READ = 0x0010;
pub const TOKEN_ASSIGN_PRIMARY = 0x0001;
pub const TOKEN_DUPLICATE = 0x0002;
pub const TOKEN_IMPERSONATE = 0x0004;
pub const TOKEN_QUERY = 0x0008;
pub const TOKEN_QUERY_SOURCE = 0x0010;
pub const SE_PRIVILEGE_ENABLED_BY_DEFAULT = 0x00000001;
pub const SE_PRIVILEGE_ENABLED = 0x00000002;
pub const STARTF_USESHOWWINDOW = 0x00000001;
pub const STARTF_USESTDHANDLES = 0x00000100;
pub const NORMAL_PRIORITY_CLASS = 0x00000020;
pub const JOB_OBJECT_LIMIT_KILL_ON_JOB_CLOSE = 0x00002000;
pub const STARTUPINFOA = extern struct { _padding: [104]u8 = [_]u8{0} ** 104 };
pub const STARTUPINFOW = extern struct { _padding: [104]u8 = [_]u8{0} ** 104 };
pub const STARTUPINFOEXA = extern struct { _padding: [112]u8 = [_]u8{0} ** 112 };
pub const STARTUPINFOEXW = extern struct { _padding: [112]u8 = [_]u8{0} ** 112 };
pub const PROCESS_INFORMATION = extern struct { _padding: [24]u8 = [_]u8{0} ** 24 };
pub const JOBOBJECT_BASIC_LIMIT_INFORMATION = extern struct { _padding: [48]u8 = [_]u8{0} ** 48 };
pub const IO_COUNTERS = extern struct { _padding: [48]u8 = [_]u8{0} ** 48 };
pub const JOBOBJECT_EXTENDED_LIMIT_INFORMATION = extern struct { _padding: [112]u8 = [_]u8{0} ** 112 };

pub const SYNCHRONIZATION_BARRIER_FLAGS_SPIN_ONLY = 0x1;
pub const SYNCHRONIZATION_BARRIER_FLAGS_BLOCK_ONLY = 0x2;
pub const SYNCHRONIZATION_BARRIER_FLAGS_NO_DELETE = 0x4;

pub const STATUS_ABANDONED_WAIT_0 = 0x00000080;
pub const WAIT_FAILED = 0xffffffff;
pub const WAIT_OBJECT_0 = 0x00000000;
pub const WAIT_ABANDONED = 0x00000080;
pub const WAIT_TIMEOUT = 258;
pub const TLS_OUT_OF_INDEXES = 0xFFFFFFFF;
pub const CREATE_SUSPENDED = 0x00000004;
pub const THREAD_GET_CONTEXT = 0x0008;
pub const THREAD_QUERY_INFORMATION = 0x0040;
pub const THREAD_SUSPEND_RESUME = 0x0002;
pub const THREAD_TERMINATE = 0x0001;
pub const SEMAPHORE_ALL_ACCESS = 0x1F0003;
pub const SEMAPHORE_MODIFY_STATE = 0x0002;
pub const EVENT_ALL_ACCESS = 0x1F0003;
pub const EVENT_MODIFY_STATE = 0x0002;
pub const RTL_CONDITION_VARIABLE_LOCKMODE_SHARED = 0x1;
pub const IMAGE_TLS_DIRECTORY32 = extern struct { _padding: [24]u8 = [_]u8{0} ** 24 };
pub const IMAGE_TLS_DIRECTORY64 = extern struct { _padding: [40]u8 = [_]u8{0} ** 40 };
pub const LIST_ENTRY = extern struct { _padding: [16]u8 = [_]u8{0} ** 16 };
pub const RTL_CRITICAL_SECTION_DEBUG = extern struct { _padding: [40]u8 = [_]u8{0} ** 40 };
pub const RTL_CRITICAL_SECTION = extern struct { _padding: [40]u8 = [_]u8{0} ** 40 };
pub const RTL_CONDITION_VARIABLE = extern struct { _padding: [8]u8 = [_]u8{0} ** 8 };
pub const RTL_SRWLOCK = extern struct { _padding: [8]u8 = [_]u8{0} ** 8 };
